Add basic styling

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,11 @@
 <footer class="footer">
 	<small>
-		EthiKelLee website by Alex Kelly and William Lee
+		<%= link_to "EthiKelLee", root_path %> 
+		website by Alex Kelly and William Lee
 	</small>
 	<nav>
 		<ul>
-			<li><%= link_to "Twitter", 	'#' %></li>
+			<li><%= link_to "Twitter", 	'https://twitter.com/ethikellee' %></li>
 			<li><%= link_to "Facebook",	'#' %></li>
 		</ul>
 	</nav>
