--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,9 +10,10 @@
 			<%= link_to "[EthiKelLee]", root_path, id: "logo" %>
 			<div class="nav-collapse collapse">
 				<ul class="nav pull-right">
-					<li><%= link_to "Home",		root_path %></li>
-					<li><%= link_to "About",	about_path %></li>
-					<li><%= link_to "Contact",	contact_path %></li>
+					<li><%= link_to "Home",				root_path %></li>
+					<li><%= link_to "About",			about_path %></li>
+					<li><%= link_to "Contact",			contact_path %></li>
+					<li><%= link_to "Client Sign In",	'#' %></li>
 				</ul>
 			</div>
 		</div>
