added sample carousel

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,55 @@
-<h1>StaticPages#home</h1>
+<h1>Ethikellee Services</h1>
+
+<div class="row">
+  <div class="offset2 span8 lead well">
+    <p>At Ethikellee, we care alot about websites. We started as a group of friends just making cool websites for fun. We then were asked to make websites professionally by lecturers and friends. Our websites are bitchin because making websites is our passion! We also come up with great ideas and love technology.
+    </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="offset3 span9 lead">
+    <blockquote>
+      <p>I'm Cool</p>
+      <small>Laurence Hone</small>
+    </blockquote>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="offset3 span6">
+    <div id="myCarousel" class="carousel slide">
+      <!-- Carousel items -->
+      <div class="carousel-inner">
+        <div class="active item">
+          <img src="assets/kelly1.jpg" />
+            <div class="carousel-caption">
+              <h4>iPhase Taking the Piss</h4>
+              <p>Back when iPhase were recording their Pre-EP.. they thought they would just go and take the piss.. and in fact they succeeded</p>
+            </div>
+        </div>
+        <div class="item">
+          <img src="assets/kelly2.jpg" />
+          <div class="carousel-caption">
+            <h4>Mr Derrrpp</h4>
+            <p>In his spare time, Alex kelly likes to serve kids.. the white stuff.. or the yellow stuff.. isn't he silly kids? DERPP</p>
+          </div>
+        </div>
+        
+        <div class="item">
+          <img src="assets/kelly3.jpg" />
+          <div class="carousel-caption">
+            <h4>National Gallery KELLY</h4>
+            <p>Painted by the infamous David Cobley.. this painting is now in the national gallery. The infamous kelly services CEO used to go to Java Coffee shop where David Cobley used to reside EVERY day. So ingrained was the Kelly image in David's head.. he drew this picture. </p>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel nav -->
+      <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div>
+  </div>
+</div>
+
 <p>Find me in app/views/static_pages/home.html.erb</p>
