--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,10 @@ textarea {
 	}
 }
 
+.icon {
+  height: 50px;
+  width: 50px;
+}
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -216,3 +220,35 @@ p.date-label-text {
 	margin-bottom: 3px;
 	line-height: 1.3 !important;
 }
+
+/* homepage */
+
+.option-menu {
+  margin-bottom: 20px;
+}
+
+#showcase {
+  -moz-box-shadow: 0 0 5px 5px #888;
+  -webkit-box-shadow: 0 0 5px 5px#888;
+  box-shadow: 0 0 5px 5px #888;
+  padding:20px;
+  background-color: black;
+  
+}
+
+#who_are_they {
+  img {
+
+  }
+  .alex_character_bio
+  {
+    margin-top: 20px;
+  }
+  .will_character_bio
+  {
+    margin-top: 40px;
+  }
+}
+
+
+
