--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 			<div class="nav-collapse collapse">
 				<ul class="nav pull-right">
 					<li><%= link_to "Home",				root_path %></li>
-					<li><%= link_to "About",			about_path %></li>
+					<li><%= link_to "Portfolio",			about_path %></li>
 					<li><%= link_to "Contact",			contact_path %></li>
 					<li><%= link_to "Client Sign In",	'#' %></li>
 				</ul>
