--- a/app/views/static_pages/_whoarethey.html.erb
+++ b/app/views/static_pages/_whoarethey.html.erb
@@ -1,12 +1,30 @@
 <div id='who_are_they'>
   <h1 class='center'>Ethikellee Is ...</h1>
 
+    <div class="row">
+      <div class="offset2 span8 lead well">
+        <p>At Ethikellee, we care alot about websites. We started as a group of friends just making cool websites for fun. We then were asked to make websites professionally by lecturers and friends. Our websites are bitchin because making technology happen is our passion. We also come up with great ideas and love technology.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="offset2 span10 lead">
+        <blockquote>
+          <p>I'm Cool</p>
+          <small>Laurence Hone</small>
+        </blockquote>
+      </div>
+    </div>
+
+
+
   <div class="row">
     <div class="offset1 well span10">
         <h3>Alex Kelly</h3>
         <div class='alex_character_bio'>
           <div class='span2'>
-            <%=image_tag 'kelly.jpg'%>
+            <%=image_tag 'kelly.jpg', class: 'img-polaroid'%>
           </div>
           <div class='span7'>
             <p>My Name is Alex Kelly and i'm at your service. I like balls in my mouth.. larping..etc.. and playing KeyTar in the bathroom. This one time I played such an awesome KeyTar solo that i made myself shit again!! even though i didn't need to. I am one half of EthiKellee and am proud to be part of such an awesome dynamic duo.
@@ -25,11 +43,11 @@
       <h3 class=''>William Lee</h3>
         <div class='will_character_bio'>
           <div class='span7'>
-            <p>Will here. I'm the wildcard of the group. That's right. I'm a level 47 paladin and am the manservant of your mother also. I kickass at guitar and am really good at shredding.. paper. That's what i do in the office really. I'm super awesome and you can check out my video cv at some point.
+            <p>Will here. I'm the wildcard of the group. That's right. I'm a level 47 paladin and am the manservant of your mother also. I kickass at guitar and am really good at shredding.. paper. That's what i do in the office really. I'm super awesome and you can check out my video cv at some point. I love making up creative ideas.. just to cure my own itch. I work for ING bank.. my real passion is websites and making new technoligies with great UI to make peoples lives easier.
             </p>
           </div>
           <div class='span2'>
-            <%= image_tag 'willee.jpg', class: 'pull-right'%>
+            <%= image_tag 'willee.jpg', class: 'pull-right img-polaroid'%>
           </div>
         </div>
         <div class='social-networking'>
