--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 
 <%= render 'showcase'%>
+
+<div id='workflow' class='well'> 
+  <h2>Workflow goes here ...</h2>
+</div>
 <%= render'about'%>
 
 <%= render 'whoarethey'%>
