home page amended. Also home page specific links only show on home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -233,6 +233,7 @@ p.date-label-text {
   box-shadow: 0 0 5px 5px #888;
   padding:20px;
   background-color: black;
+  min-height: 600px;
   
 }
 
@@ -251,8 +252,9 @@ p.date-label-text {
 }
 
 #workflow {
-  margin: 20px 0 20px 0;
+  margin: 300px 0 300px 0;
   padding: 50px 0 50px 0;
+
 }
 
 
