--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	  	<%= csrf_meta_tags %>
 		<%= render 'layouts/shim' %>
 	</head>
-	<body data-spy="scroll" data-target="#navbar" data-offset="-50">
+	<body data-spy="scroll" data-target="#navbar">
 		<%= render 'layouts/header' %>
 		<div class="container">
 			<% flash.each do |key, value| %>
