installs and implements bxslider for future workflow images

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
           <% end %>
 					<li><%= link_to "Home",				root_path %></li>
 					<li><%= link_to "Portfolio",			about_path %></li>
-					<li><%= link_to "Contact",			contact_path %></li>
+					<li><%= link_to "Pricing/Contact",			contact_path %></li>
 					<li><%= link_to "Client Sign In",	'#' %></li>
 				</ul>
 			</div>
