--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,16 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class='container'>
+  <div class='hero-unit'>
+    <h1 class='normal'>Guys! Make me a website :)</h1>
+    <p>
+      If you would like us to make a website here are a few things you should know.
+      <ul>
+        <li>For simple websites we're quite reasonable on pricing. If it's about 1-5 pages we'll charge up £300.</li>
+        <li>We can make more complex websites. However we like to sit down with the client to discuss everything and sketch out mockups. This way we're transparent and both parties know what they're getting</li>
+        <li>We're friendly people who like clarity. When you email us please state whether your site is a simple site, what you would like on the website and we'll spec it out for you with a timespan. You'll receive a client log on to the website and you'll be able to track the progress of your website as well as access early prototypes. </li>
+      </ul>
+    </p>
+    <p>
+      <a class="btn btn-primary btn-large center" href='mailto:keyboardstand@william-lee.com'>Email Us »</a>
+    </p>
+  </div>
+</div>
