--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,10 @@
 <div id='workflow' class='well'> 
   <h2>Workflow goes here ...</h2>
 </div>
+<ul class='bxslider'>
+  <li><%= image_tag 'kelly1.jpg', title: 'Workflow Step 1'%></li>
+  <li><%= image_tag 'kelly2.jpg', title: 'Workflow Step 2'%></li>
+</ul>
 <%= render'about'%>
 
 <%= render 'whoarethey'%>
