--- a/app/views/static_pages/_whoarethey.html.erb
+++ b/app/views/static_pages/_whoarethey.html.erb
@@ -1,6 +1,8 @@
 <div id='who_are_they'>
   <h1 class='center'>Ethikellee Is ...</h1>
-
+    
+    
+    
     <div class="row">
       <div class="offset2 span8 lead well">
         <p>At Ethikellee, we care alot about websites. We started as a group of friends just making cool websites for fun. We then were asked to make websites professionally by lecturers and friends. Our websites are bitchin because making technology happen is our passion. We also come up with great ideas and love technology.
@@ -55,8 +57,14 @@
           <%=image_tag 'facebook-icon.png', class: 'icon'%>
         </div>
     </div><!-- /offset1 well span10 pull-right-->
-    
-    
+  </div>
+  
+  <div class="row">
+    <div class="offset3">
+      <a class="twitter-timeline" href="https://twitter.com/ethikellee" data-widget-id="283740665374965760">Tweets by @ethikellee</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      
+    </div>
   </div>
     
 </div>
