--- a/app/views/static_pages/_showcase.html.erb
+++ b/app/views/static_pages/_showcase.html.erb
@@ -5,14 +5,14 @@
         <!-- Carousel items -->
         <div class="carousel-inner">
           <div class="active item">
-            <img src="assets/kelly1.jpg" />
+            <%= image_tag 'eg.png'%>
               <div class="carousel-caption">
                 <h4>iPhase Taking the Piss</h4>
                 <p>Back when iPhase were recording their Pre-EP.. they thought they would just go and take the piss.. and in fact they succeeded</p>
               </div>
           </div>
           <div class="item">
-            <img src="assets/kelly2.jpg" />
+            <%= image_tag 'insight.png'%>
             <div class="carousel-caption">
               <h4>Mr Derrrpp</h4>
               <p>In his spare time, Alex kelly likes to serve kids.. the white stuff.. or the yellow stuff.. isn't he silly kids? DERPP</p>
@@ -20,7 +20,7 @@
           </div>
         
           <div class="item">
-            <img src="assets/kelly3.jpg" />
+            <%= image_tag 'illogical.png'%>
             <div class="carousel-caption">
               <h4>National Gallery KELLY</h4>
               <p>Painted by the infamous David Cobley.. this painting is now in the national gallery. The infamous kelly services CEO used to go to Java Coffee shop where David Cobley used to reside EVERY day. So ingrained was the Kelly image in David's head.. he drew this picture. </p>
