--- a/app/views/static_pages/_showcase.html.erb
+++ b/app/views/static_pages/_showcase.html.erb
@@ -1,35 +1,39 @@
-<div id="showcase">
-  <div class="row">
-    <div class="offset3 span6">
-      <div id="myCarousel" class="carousel slide">
-        <!-- Carousel items -->
-        <div class="carousel-inner">
-          <div class="active item">
-            <%= image_tag 'eg.png'%>
+<div class='row'>
+  <h1 class='center showcase-title'>Meet Some of our clients ....</h1>
+  
+  <div id="showcase" class='offset1 span10'>
+    <div class="row">
+      <div class="offset1 span8">
+        <div id="myCarousel" class="carousel slide">
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item">
+              <%= image_tag 'eg.png'%>
+                <div class="carousel-caption">
+                  <h4>ElectricGhost Art &amp Design</h4>
+                  <p>ElectricGhost is a digital art and design agency that is so passionate about music it even has it's own monthly music magazine</p>
+                </div>
+            </div>
+            <div class="item">
+              <%= image_tag 'insight.png'%>
               <div class="carousel-caption">
-                <h4>iPhase Taking the Piss</h4>
-                <p>Back when iPhase were recording their Pre-EP.. they thought they would just go and take the piss.. and in fact they succeeded</p>
+                <h4>Iceton</h4>
+                <p>Iceton is a small company with big ideas. Owned and managed by Ben Iceton.</p>
               </div>
-          </div>
-          <div class="item">
-            <%= image_tag 'insight.png'%>
-            <div class="carousel-caption">
-              <h4>Mr Derrrpp</h4>
-              <p>In his spare time, Alex kelly likes to serve kids.. the white stuff.. or the yellow stuff.. isn't he silly kids? DERPP</p>
             </div>
-          </div>
         
-          <div class="item">
-            <%= image_tag 'illogical.png'%>
-            <div class="carousel-caption">
-              <h4>National Gallery KELLY</h4>
-              <p>Painted by the infamous David Cobley.. this painting is now in the national gallery. The infamous kelly services CEO used to go to Java Coffee shop where David Cobley used to reside EVERY day. So ingrained was the Kelly image in David's head.. he drew this picture. </p>
+            <div class="item">
+              <%= image_tag 'illogical.png'%>
+              <div class="carousel-caption">
+                <h4>Illogical Gaming</h4>
+                <p>[Kelly can have a few words to say about this]</p>
+              </div>
             </div>
           </div>
+          <!-- Carousel nav -->
+          <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
         </div>
-        <!-- Carousel nav -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
       </div>
     </div>
   </div>
