--- a/app/views/static_pages/_whoarethey.html.erb
+++ b/app/views/static_pages/_whoarethey.html.erb
@@ -1,7 +1,5 @@
-<div id='who_are_they'>
+<div id='who_are_they' class=''>
   <h1 class='center'>Ethikellee Is ...</h1>
-    
-    
     
     <div class="row">
       <div class="offset2 span8 lead well">
@@ -66,5 +64,4 @@
       
     </div>
   </div>
-    
 </div>
