tidies workflow css code

--- a/app/views/static_pages/_showcase.html.erb
+++ b/app/views/static_pages/_showcase.html.erb
@@ -1,9 +1,9 @@
-<div class='row'>
+<div id='showcase' class='row well span11'>
   <h1 class='center showcase-title'>Meet Some of our clients ....</h1>
   
-  <div id="showcase" class='offset1 span10'>
+  <div id="showcase" class='offset1 span8'>
     <div class="row">
-      <div class="offset1 span8">
+      <div class="span8">
         <div id="myCarousel" class="carousel slide">
           <!-- Carousel items -->
           <div class="carousel-inner">
