--- a/app/views/static_pages/_whoarethey.html.erb
+++ b/app/views/static_pages/_whoarethey.html.erb
@@ -1,4 +1,4 @@
-<div id='who_are_they' class=''>
+<div id='who_are_they' class='well'>
   <h1 class='center'>Ethikellee Is ...</h1>
     
     <div class="row">
