fixes turbolink reload issue

--- a/app/views/static_pages/_showcase.html.erb
+++ b/app/views/static_pages/_showcase.html.erb
@@ -26,7 +26,7 @@
               <%= image_tag 'illogical.png'%>
               <div class="carousel-caption">
                 <h4>Illogical Gaming</h4>
-                <p>[Kelly can have a few words to say about this]</p>
+                <p>[Kelly can have a few words to say about this.. and will not have a bad word said..]</p>
               </div>
             </div>
           </div>
